[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
method = { path = "../methods/guest" }
risc0-zkvm = { version = "^2.0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
hex = "0.4"
sha2 = "0.10"
ethers = { version = "2.0", features = ["abigen", "rustls"] } # Or web3 / alloy-rs
tokio = { version = "1", features = ["full"] }
dotenv = "0.15" # For managing private keys and RPC URLs
hex-literal = "0.4" # For hardcoding addresses if not using .env