[package]
name = "methods"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add risc0-zkvm as a direct dependency for this library crate
risc0-zkvm = { version = "^2.0.2" }
method = { path = "guest", package = "method" }

[build-dependencies]
risc0-build = { version = "^2.1.1" }

[package.metadata.risc0]
methods = ["guest"]
